# Controlling-a-Motor-Java-Project

./: .gitattributes  README.md
Documentation/SequenceDiagrams/CombinedSequenceDiagram/: FullSD.txt
Documentation/SequenceDiagrams/PlantUML_Scripts/: JavaProject_AppInteractions.txt  JavaProject_AppLaunchAndPortSel.txt  JavaProject_MCUScheduledTask.txt  JavaProject_MotorOffOn.txt  JavaProject_Motor_Init.txt
Documentation/WBS/PlantUML/: WBS.txt
GUI_Versions/Combined_GUI/javaProject/: pom.xml
JavaFX_App/: Makefile  README.md  SerialCommExample.java
JavaFX_App/src/: SerialCommManager.java
JavaFX_App_Full/: MANIFEST.MF  Makefile  MotorControl.desktop  README.md  rx.py
JavaFX_App_Full/Rx_Test/: serial_receive.py
JavaFX_App_Full/src/: App.java  SerialCommManager.java
MCU_MotorControl/: serialCommTest.py
MCU_MotorControl/APP/: CMakeLists.txt
MCU_MotorControl/APP/inc/: control.h
MCU_MotorControl/APP/src/: control.c  main.c
MCU_MotorControl/COTS/HAL/HLED/inc/: HLED.h  HLED_LCFG.h
MCU_MotorControl/COTS/HAL/HLED/src/: HLED_LCFG.c
MCU_MotorControl/COTS/HAL/HMOTOR/: CMakeLists.txt
MCU_MotorControl/COTS/HAL/HMOTOR/src/: Motor.c
MCU_MotorControl/COTS/HAL/HSCHEDULER/inc/: HSCHEDULER.h
MCU_MotorControl/COTS/HAL/HSCHEDULER/src/: HSCHEDULER_LCFG.c
MCU_MotorControl/COTS/MCAL/MPWM/: CMakeLists.txt
MCU_MotorControl/COTS/MCAL/MPWM/inc/: TIMER0.h  TIMER0_Config.h
MCU_MotorControl/COTS/MCAL/MUSART/: CMakeLists.txt
MCU_MotorControl/COTS/MCAL/MUSART/src/: usart.c
MCU_MotorControl/COTS/STD_LIB/inc/: std_types.h
Motor_gui/: pom.xml
PWM/PWM/: Motor.c  Motor.h  PWM.componentinfo.xml  PWM.cppproj  TIMER0.c  TIMER0.h  main.c
PWM/PWM/Debug/: Makefile  Motor.d  PWM.elf  PWM.hex  PWM.lss  PWM.map  PWM.srec  TIMER0.d  main.d  makedep.mk
uart_driver/: .gitignore  Doxyfile  dio.c  dio.h  main.c
uart_driver/MCAL/MUSART/: CMakeLists.txt
uart_driver/MCAL/MUSART/inc/: usart.h
uart_driver/MCAL/MUSART/src/: usart.c
uart_driver/STD_LIB/inc/: bit_math.h  std_types.h
(+10 files in other folders)
